--- a/skin/frontend/default/default/css/iestyles.css
+++ b/skin/frontend/default/default/css/iestyles.css
@@ -75,8 +75,4 @@ input.form-checkbox { width:13px; height:13px; }
 #nav ul li.parent { margin-bottom:-3px; }
 
 /* Clearer */
-.clear { display:block; clear:both; font-size:0; line-height:0; height:0; visibility:hidden; overflow:hidden;	}
-
-/* Fix for IE menu bug */
-#nav iframe,
-.truncated iframe { position:absolute; left:-1px; top:0; z-index:-1; background:transparent; filter:progid:DXImageTransform.Microsoft.Alpha(style=0,opacity=0); }
+.clear { clear:both; font-size:0; line-height:0; height:0; visibility:hidden; overflow:hidden; }
